--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"/>
     <uses-permission android:name="android.permission.GET_PACKAGE_SIZE"/>
     <uses-permission android:name="android.permission.READ_SETTINGS"/>
-    <application android:allowBackup="false" android:appComponentFactory="androidx.core.app.CoreComponentFactory" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:largeHeap="true" android:name="com.ucturbo.BrowserApplication" android:networkSecurityConfig="@xml/network_security_config" android:requestLegacyExternalStorage="true" android:supportsRtl="false" android:usesCleartextTraffic="true">
+    <application android:allowBackup="false" android:appComponentFactory="androidx.core.app.CoreComponentFactory" android:debuggable="false" android:icon="@mipmap/ic_launcher" android:label="@string/app_name" android:largeHeap="true" android:name="com.ucturbo.BrowserApplication" android:networkSecurityConfig="@xml/network_security_config" android:requestLegacyExternalStorage="true" android:supportsRtl="false" android:usesCleartextTraffic="true">
         <activity android:configChanges="keyboardHidden|mcc|mnc|orientation|screenSize" android:excludeFromRecents="true" android:exported="true" android:finishOnTaskLaunch="true" android:label="ucturbo" android:launchMode="singleTask" android:name="com.quark.browser.wxapi.WXEntryActivity" android:noHistory="true" android:taskAffinity="wxapi.WXEntryActivity"/>
         <meta-data android:name="android.max_aspect" android:value="2.5"/>
         <meta-data android:name="com.amap.api.v2.apikey" android:value="1200699f230a872fc47edc86fe648595"/>
